--- a/src/gui/listarFuncionarios.form
+++ b/src/gui/listarFuncionarios.form
@@ -163,6 +163,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Alterar dados do Funcion&#xe1;rio"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
